--- a/My_KidsBank_SpecFlow/My_KidsBank_SpecFlow.csproj
+++ b/My_KidsBank_SpecFlow/My_KidsBank_SpecFlow.csproj
@@ -7,13 +7,56 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="SpecFlow" Version="3.8.14" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="SpecFlow.NetCore" Version="1.3.5" />
+    <PackageReference Include="SpecFlow.NUnit.Runners" Version="3.8.14" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="91.0.4472.1900" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Browser_Setup\" />
+    <Folder Include="Feature_Files\" />
+    <Folder Include="Step_Def\" />
+    <Folder Include="Page_Test\" />
+  </ItemGroup>
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Example\Test1.feature">
+      <Visible>False</Visible>
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Test1.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Browser_Setup\LoginTest2.feature">
+      <Visible>False</Visible>
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>LoginTest2.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Feature_Files\Login_kidsbank.feature">
+      <Visible>False</Visible>
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Login_kidsbank.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Feature_Files\For_Cal.feature">
+      <Visible>False</Visible>
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>For_Cal.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+  </ItemGroup>
+  <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Update="Example\Test1.feature.cs">
+      <DependentUpon>Test1.feature</DependentUpon>
+    </SpecFlowObsoleteCodeBehindFiles>
+    <SpecFlowObsoleteCodeBehindFiles Update="Feature_Files\Login_kidsbank.feature.cs">
+      <DependentUpon>Login_kidsbank.feature</DependentUpon>
+    </SpecFlowObsoleteCodeBehindFiles>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Example\Login.feature.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Feature_Files\For_Cal.feature.cs">
+      <DependentUpon>For_Cal.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
